--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -1,15 +1,33 @@
 {% extends 'shop/base.html' %}
 {% load static %}
-{% block customhead %}
-    <link rel="stylesheet" href="{% static 'shop/css/owl.carousel.css' %}">
-    <link rel="stylesheet" href="{% static 'shop/css/owl.theme.default.css' %}">
-{% endblock customhead %}
 {% block content %}
 <div class="content-container product-page">
 <div class="col-1 product-page">
-<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
+    <div class="slider-holder">
+        
+
+         <div class="wrapper">
+            <button id="left" class="main_sliderBtn">&#8249;</button>
+            <div class="carousel">
+                
+                    {% for img in gallery %}
+                    <img src="{{ img.galleryimg.url }}" alt="img" draggable="false">
+                    {% endfor %}
+                
+            </div>
+            <div class="slick">
+                {% for img in gallery %}
+                <div class="slick-item"></div>
+                {% endfor %}
+            </div>
+            <button id="right" class="main_sliderBtn">&#8250;</button>
+        </div>
+       
+        
+   </div> 
 </div>
 <div class="col-2 product-page product_data">
+    
     <h3 class="product-title product-page">{{ product.title }}</h3>
     {% if reviews %}
     <div class="rating rating{{ ratingaverage}}">
@@ -55,7 +73,7 @@
             <div class="attribute-item offer">
                 <input type="hidden" class="attrib_id" name="atribute_id" value="{{ attribute.id }}">
                 <p class="offer-title">{{ attribute.offer.title }}</p>
-                <p class="offer-price">{{ attribute.offer.price }} ден</p>
+                <p class="offer-price">{{ attribute.price }} ден</p>
                 <p class="offer-text">{{ attribute.offer.incentive }}</p>
             </div>
             {% endfor %}
@@ -189,17 +207,127 @@
         {% endfor %}  
         </ul>
     </section>
-    <!-- <img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
-<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
-<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
-<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
-<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
-<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
-<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600"> -->
 </div>
-
-
-
-
-
 {% endblock content %}
+{% block scripts %}
+<script src="{%  static 'shop/js/slider.js' %}"></script>
+<script>
+var slider = document.getElementById('slider'),
+    sliderItems = document.getElementById('slides'),
+    prev = document.getElementById('prev'),
+    next = document.getElementById('next');
+
+function slide(wrapper, items, prev, next) {
+  var posX1 = 0,
+      posX2 = 0,
+      posInitial,
+      posFinal,
+      threshold = 100,
+      slides = items.getElementsByClassName('slide'),
+      slidesLength = slides.length,
+      slideSize = items.getElementsByClassName('slide')[0].offsetWidth,
+      firstSlide = slides[0],
+      lastSlide = slides[slidesLength - 1],
+      cloneFirst = firstSlide.cloneNode(true),
+      cloneLast = lastSlide.cloneNode(true),
+      index = 0,
+      allowShift = true;
+  
+  // Clone first and last slide
+  items.appendChild(cloneFirst);
+  items.insertBefore(cloneLast, firstSlide);
+  wrapper.classList.add('loaded');
+  
+  // Mouse events
+  items.onmousedown = dragStart;
+  
+  // Touch events
+  items.addEventListener('touchstart', dragStart);
+  items.addEventListener('touchend', dragEnd);
+  items.addEventListener('touchmove', dragAction);
+  
+  // Click events
+  prev.addEventListener('click', function () { shiftSlide(-1) });
+  next.addEventListener('click', function () { shiftSlide(1) });
+  
+  // Transition events
+  items.addEventListener('transitionend', checkIndex);
+  
+  function dragStart (e) {
+    e = e || window.event;
+    e.preventDefault();
+    posInitial = items.offsetLeft;
+    
+    if (e.type == 'touchstart') {
+      posX1 = e.touches[0].clientX;
+    } else {
+      posX1 = e.clientX;
+      document.onmouseup = dragEnd;
+      document.onmousemove = dragAction;
+    }
+  }
+
+  function dragAction (e) {
+    e = e || window.event;
+    
+    if (e.type == 'touchmove') {
+      posX2 = posX1 - e.touches[0].clientX;
+      posX1 = e.touches[0].clientX;
+    } else {
+      posX2 = posX1 - e.clientX;
+      posX1 = e.clientX;
+    }
+    items.style.left = (items.offsetLeft - posX2) + "px";
+  }
+  
+  function dragEnd (e) {
+    posFinal = items.offsetLeft;
+    if (posFinal - posInitial < -threshold) {
+      shiftSlide(1, 'drag');
+    } else if (posFinal - posInitial > threshold) {
+      shiftSlide(-1, 'drag');
+    } else {
+      items.style.left = (posInitial) + "px";
+    }
+
+    document.onmouseup = null;
+    document.onmousemove = null;
+  }
+  
+  function shiftSlide(dir, action) {
+    items.classList.add('shifting');
+    
+    if (allowShift) {
+      if (!action) { posInitial = items.offsetLeft; }
+
+      if (dir == 1) {
+        items.style.left = (posInitial - slideSize) + "px";
+        index++;      
+      } else if (dir == -1) {
+        items.style.left = (posInitial + slideSize) + "px";
+        index--;      
+      }
+    };
+    
+    allowShift = false;
+  }
+    
+  function checkIndex (){
+    items.classList.remove('shifting');
+
+    if (index == -1) {
+      items.style.left = -(slidesLength * slideSize) + "px";
+      index = slidesLength - 1;
+    }
+
+    if (index == slidesLength) {
+      items.style.left = -(1 * slideSize) + "px";
+      index = 0;
+    }
+    
+    allowShift = true;
+  }
+}
+
+slide(slider, sliderItems, prev, next);</script>
+{% endblock scripts %}
