--- a/shop/templates/shop/shopmanager/shopmanager_base.html
+++ b/shop/templates/shop/shopmanager/shopmanager_base.html
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
-    
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 <body>
     {% include 'shop/shopmanager/includes/sh_header.html' %} 
@@ -19,7 +21,7 @@
     {% block content %}{% endblock content %}
     </div>
     {% include 'shop/shopmanager/includes/sh_footer.html' %}
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    
     <script src="{%  static 'shop/js/shopmanager.js' %}"></script>
 </body>
 </html>
