--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -643,7 +643,9 @@ input[type=number] {
     color: var(--green);
 
 }
-
+.toggle-content.main-toggle img {
+    width: 100%;
+}
 
 /* slider */
 .slider-wrapper {
