--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -1155,6 +1155,9 @@ input[type=number] {
     padding-right: 5px;
     opacity: 0.4;
 }
+.slick-item.active{
+    opacity: 1;
+}
 .col-2.product-page{
     padding: 10px;
     flex-basis: 46%;
