--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main.css' %} ">
+    <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main_minified.css' %} ">
     
 </head>
 <body>
@@ -48,7 +48,7 @@
     </div>
     {% include "shop/includes/footer.html" %}
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="{%  static 'shop/js/main.js' %}"></script>
+    <script src="{%  static 'shop/js/main_minified.js' %}"></script>
     {% block scripts%}{% endblock scripts %}
 </body>
 </html>
