--- a/shop/templates/shop/shopmanager/dashboard.html
+++ b/shop/templates/shop/shopmanager/dashboard.html
@@ -53,6 +53,12 @@
                         x <span class="table-strong">{{ item.quantity }}</span> - {{item.price}} ден</p>
                         {% endif %}
                         {% endfor %}
+                        {% for fee in orderFees %}
+                        {% if order == fee.order %}
+                        <p class="table-content"><span class="table-strong">{{ fee.title }}</span>
+                        <span class="table-content"> - {{fee.price}} ден</span>
+                        {% endif %}
+                        {% endfor %}
                         <p class="table-content"><span class="table-strong">Цена без достава: </span>{{ order.subtotal_price }} ден</p>
                         <p class="table-content"><span class="table-strong">Достава: </span>{{ order.get_shipping }}</p>
                         <p class="table-content"image.png><span class="table-strong">Вкупно: </span>{{ order.total_price }} ден</p>
