--- a/shop/templates/shop/shopmanager/shopmanager_base.html
+++ b/shop/templates/shop/shopmanager/shopmanager_base.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% if heading %}
+    <title>{{heading}} - ShopManager</title>
+    {% else %}
     <title>ShopManager - GreenGoShop</title>
+    {% endif %}
     <link rel="stylesheet" href="{% static 'shop/css/shopmanager.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
