--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="header-cart header-icon">
-            <img src="{% static 'icons/cart.webp' %}" alt="" class="image-icon" width="24" height="24">
+            <img src="{% static 'icons/cart.svg' %}" alt="" class="image-icon" width="24" height="24">
             <span id="cart-count">{{ itemscount }}</span>
             
         </div>
