--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="content-container product-page">
+<a href="tel:071321312" class="phone-sticky mobile"><span>ЈАВИ СЕ И НАРАЧАЈ <img src="{% static 'icons/phone.svg' %}" alt="" class="image-icon top-icon filter-white" width="16" height="16"></span></a>
 <div class="col-1 product-page">
     <div class="slider-holder">
         
@@ -209,6 +210,13 @@
         </ul>
     </section>
 </div>
+
+{% if attributes %}
+<button class="proceed-to-checkout variable-add-to-cartBtn stickyBtn">НАРАЧАЈ ВЕДНАШ</button>
+{% else %}
+<button class="proceed-to-checkout add-to-cartBtn stickyBtn">НАРАЧАЈ ВЕДНАШ</button>
+{% endif %}
+
 {% endblock content %}
 {% block scripts %}
 <script src="{%  static 'shop/js/slider_minified.js' %}"></script>
