--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -1086,6 +1086,31 @@ input[type=number] {
     padding: 10px;
     flex-basis: 46%;
 }
+.phone-sticky{
+    position: sticky;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -ms-sticky;
+    position: -o-sticky;
+    top: 0px;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    background-color: var(--black);
+    width: 100%;
+    text-align: center;
+    padding: 10px 0px;
+    margin-bottom: -4vw;
+    z-index: 10000;
+}
+.stickyBtn{
+    position: fixed;
+    bottom: 0;
+    margin: 0!important;
+    border-radius: 0!important;
+    display: none;
+    z-index: 10000;
+}
 .slider-holder{
     display: flex;
     justify-content: center;
