--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -212,9 +212,9 @@
 </div>
 
 {% if attributes %}
-<button class="proceed-to-checkout variable-add-to-cartBtn stickyBtn">НАРАЧАЈ ВЕДНАШ</button>
+<button class="proceed-to-checkout variable-add-to-cartBtn stickyBtn mobile">НАРАЧАЈ ВЕДНАШ</button>
 {% else %}
-<button class="proceed-to-checkout add-to-cartBtn stickyBtn">НАРАЧАЈ ВЕДНАШ</button>
+<button class="proceed-to-checkout add-to-cartBtn stickyBtn mobile">НАРАЧАЈ ВЕДНАШ</button>
 {% endif %}
 
 {% endblock content %}
