--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -189,7 +189,7 @@
         </ul>
     </section>
     <section class="slider-wrapper slider-wrapper2">
-        <h3 class="slide-title">ПОСЛЕДНИ КОЛИЧИНИ</h3>
+        <h3 class="slide-title">СЛИЧНИ ПРОИЗВОДИ</h3>
         <button class="slide-arrow slide-arrow-prev slide-arrow-prev2">&#8249;</button>
         <button class="slide-arrow slide-arrow-next slide-arrow-next2">&#8250;</button>
         <ul class="slides-container slides-container2">
