--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -100,7 +100,7 @@
     
     <div class="toggle">
         <div class="toggle-item">
-            <p>ДЕТАЛЕН ОПИС</p> <i class="fa-solid fa-angle-down toggle-icon"></i>
+            <div class="toggle-title"><p>ДЕТАЛЕН ОПИС</p> <i class="fa-solid fa-angle-down toggle-icon"></i></div>
             <div class="toggle-content main-toggle">
                 <p>{{  product.content| safe }}</p>
             </div>
@@ -108,7 +108,7 @@
     </div>
     <div class="toggle">
         <div class="toggle-item">
-            <p>ПОЛИТИКА НА ДОСТАВА</p> <i class="fa-solid fa-angle-down toggle-icon"></i>
+            <div class="toggle-title"><p>ПОЛИТИКА НА ДОСТАВА</p> <i class="fa-solid fa-angle-down toggle-icon"></i></div>
             <div class="toggle-content">
                 <a href="{% url 'dostava-page' %}" target="_blank" class="toggle-static-link">Погледни ја нашата поликита на достава</a>
             </div>
@@ -116,7 +116,7 @@
     </div>
     <div class="toggle">
         <div class="toggle-item">
-            <p>ПОЛИТИКА НА РЕКЛАМАЦИЈА</p> <i class="fa-solid fa-angle-down toggle-icon"></i>
+            <div class="toggle-title"><p>ПОЛИТИКА НА РЕКЛАМАЦИЈА</p> <i class="fa-solid fa-angle-down toggle-icon"></i></div>
             <div class="toggle-content">
                 <a href="{% url 'reklamacija-page' %}" target="_blank" class="toggle-static-link">Погледни ја нашата поликита на рекламација</a>
             </div>
