--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 </header>
-<section class="header-info"><p>ДОСТАВАТА ВО ЌИСЕЛА ВОДА ЌЕ КАСНИ 7 ДЕНА</p></section>
+<section class="header-info"><p>ВО МОМЕНТОТ ИМАМЕ ТЕХНИЧКИ ПРОБЛЕМИ КОИ ЌЕ СЕ РЕШАТ ДО 14.12.2022</p></section>
 <div id="sidecart">
     <div class="cart-close">
         <span id="close-cart">&#10006</span>
